...
        app:layout_constraintBottom_toTopOf="@+id/song_et_release_date_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/song_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_name"
            android:inputType="textPersonName"
...
        app:layout_constraintBottom_toTopOf="@+id/song_et_duration_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_et_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/song_et_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_release_date"
            android:inputType="date"
...
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_edit_text"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_edit_text"
        app:counterEnabled="true"
        app:counterMaxLength="@string/max_length_duration"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_timer"
        app:layout_constraintBottom_toTopOf="@+id/song_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_et_release_date_layout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/song_et_duration"
...
