...
        app:layout_constraintBottom_toTopOf="@+id/album_et_release_date_layout"
        app:layout_constraintEnd_toEndOf="@+id/album_et_release_date_layout"
        app:layout_constraintStart_toStartOf="@+id/album_et_release_date_layout"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/album_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_name"
            android:inputType="textPersonName"
...
        app:layout_constraintBottom_toTopOf="@+id/album_et_label_layout"
        app:layout_constraintEnd_toEndOf="@+id/album_et_label_layout"
        app:layout_constraintStart_toStartOf="@+id/album_et_label_layout"
        app:layout_constraintTop_toBottomOf="@+id/album_et_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/album_et_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_release_date"
            android:inputType="date"
...
        app:boxCornerRadiusBottomStart="@dimen/corner_radius_edit_text"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_edit_text"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_edit_text"
        app:counterEnabled="true"
        app:counterMaxLength="@string/max_length_label"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/album_button"
        app:layout_constraintEnd_toEndOf="@+id/album_button"
        app:layout_constraintStart_toStartOf="@+id/album_button"
        app:layout_constraintTop_toBottomOf="@+id/album_et_release_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/album_et_label"
...
