...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/album_detail_bt_add_new_song"
            style="@style/Widget.Material3.FloatingActionButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/content_description_bt_add_new_song"
            android:scaleX="0.6"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/album_detail_bt_edit"
            style="@style/DetailEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

...
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/song_field_album_name"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/album_detail_bt_add_songs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/album_detail_bt_add_songs"
...
